--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "keywords": [],
-  "author": "",
+  "author": "Sagbara Princewill B",
   "license": "ISC"
 }
